syntax = "proto3";

package adminserver.api.v1;

option go_package = "server/admin-server/api/v1;v1";



import "google/api/annotations.proto";
import "validate/validate.proto";
import "server/common/api/v1/develop.proto";

service Develop {
  // 停止notebook
  rpc StopNotebook (StopNotebookRequest) returns (StopNotebookReply) {
    option (google.api.http) = {
      post: "/v1/developmanage/notebook/{id}/stop"
    };
  };
  // 查询notebook列表
  rpc ListNotebook (ListNotebookRequest) returns (ListNotebookReply) {
    option (google.api.http) = {
      get: "/v1/developmanage/notebook"
    };
  };
  // 获取Notebook事件列表
  rpc GetNotebookEventList (NotebookEventListRequest) returns (NotebookEventListReply) {
    option (google.api.http) = {
       get: "/v1/developmanage/notebookevent"
    };
  };

  // 查询事件记录列表
  rpc ListNotebookEventRecord (ListNotebookEventRecordRequest) returns (ListNotebookEventRecordReply) {
    option (google.api.http) = {
      get: "/v1/developmanage/notebook/{notebookId}/eventrecord"
    };
  };
}

message StopNotebookRequest {
  string id = 1[(validate.rules).string = {min_len: 1}];
}

message StopNotebookReply {
  string id = 1;
}

message ListNotebookRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte: 1}];
  // 页大小，最小1条，最大100条
  int64 pageSize = 2[(validate.rules).int64 = {gte: 1, lte: 100}];
  string sortBy = 3;
  string orderBy = 4[(validate.rules).string = {in: ["", "asc", "desc"]}];
  int64 createdAtGte = 5;
  int64 createdAtLt = 6;
  string status = 7;
  string searchKey = 8; //name等模糊查找
  string userId = 9[(validate.rules).string = {max_len: 36}];
  string workspaceId = 10[(validate.rules).string = {max_len: 36}];
}

message Endpoint {
  string endpoint = 1;
  uint32 port = 2;
}

message Notebook {
  message Task {
    string url = 1;
    string name = 2;
    repeated Endpoint endpoints = 3;
  }
  int64 createdAt = 1;
  int64 updatedAt = 2;
  string id = 3;
  string userId = 4;
  string workspaceId = 5;
  string name = 6;
  string desc = 7;
  string imageId = 8;
  string imageName = 9;
  string algorithmId = 10;
  string algorithmVersion = 11;
  string algorithmName = 12;
  string resourceSpecId = 13;
  string resourceSpecName = 14;
  string status = 15;
  string userName = 17;
  string workspaceName = 18;
  string datasetId = 19;
  string datasetVersion = 20;
  string datasetName = 21;
  double resourceSpecPrice = 22;
  string notebookJobId = 23;
  string imageVersion = 24;
  repeated Task tasks = 25;
  string userEmail = 26;
  string  resourcePool=27;
  string exitMsg = 28;
  string command = 29;
  int64 autoStopDuration = 30;
  string operation = 31;
  string preTrainModelId = 32;
  string preTrainModelVersion = 33;
  string preTrainModelName = 34;
}

message ListNotebookReply {
  int64 totalSize = 1;
  repeated Notebook notebooks = 2;
}

message NotebookEventListRequest {
  // 页码，从1开始
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  // 页大小，最小1条，最大100条
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lte:100}];
  //任务ID
  string id = 3[(validate.rules).string = {min_len: 1}];
  //子任务序号，从0开始
  int64 taskIndex = 4[(validate.rules).int64 = {gte:0,lte:100}];
  //副本序号，从0开始
  int64 replicaIndex = 5[(validate.rules).int64 = {gte:0,lte:100}];
}

message NotebookEventListReply {
  //查询结果总数
  int64  totalSize = 1;
  //任务事件
  repeated NotebookEvent notebookEvents = 2;
}

message NotebookEvent{
  //发生时间
  string timestamp = 1;
  //副本名称
  string name = 2;
  //原因
  string reason = 3;
  //消息
  string message = 4;
}

message NotebookEventRecord {
  int64 time = 1;
  string notebookId = 2;
  common.api.v1.NotebookEventRecordType type = 3;
  string remark = 4;
}

message ListNotebookEventRecordRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  // 页大小，最小1条，最大100条
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lte:100}];
  string notebookId = 3[(validate.rules).string = {min_len: 1}];
}

message ListNotebookEventRecordReply {
  int64  totalSize = 1;
  repeated NotebookEventRecord records = 2;
}